--- a/src/component/navbar/Navbar.scss
+++ b/src/component/navbar/Navbar.scss
@@ -1,6 +1,5 @@
 .navbar{
     height:100px;
-    margin: 10px;
 
     .wrapper{
         max-width:1366px;
@@ -9,6 +8,7 @@
         flex-direction: row;
         align-items: center;
         justify-content: space-between;
+        height: 100%;
 
         span{
             font-weight: bold;
@@ -17,6 +17,7 @@
         .social{
             display: flex;
             gap: 20px;
+            padding-right: 10px;
         }
         img{
             width: 25px;
