--- a/src/component/hero/Hero.scss
+++ b/src/component/hero/Hero.scss
@@ -59,11 +59,13 @@
   
   }
   .slidingTextContainer{
+    //width: 100%;
     position: absolute;
     font-size:50vh;
     bottom:-120px;
     white-space:nowrap;
     color: #ffffff09;
+    font-weight: bold;
   }
   
   
